# libloudness

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
doc/: Usage.md
src/: CMakeLists.txt  bs1770-calculator.cpp  bs1770-calculator.hpp  constants.hpp  defines.hpp  ebur128.cpp  ebur128.hpp  interpolator.cpp  interpolator.hpp  k-filter.cpp  k-filter.hpp  libloudness.pc.cmake  meter.hpp  true-peak-calculator.cpp  true-peak-calculator.hpp  utils.hpp
src/detail/: ebur128-impl.cpp  ebur128-impl.hpp  meter-impl.cpp  meter-impl.hpp
src/loudness/: bs1770-calculator.cpp  bs1770-calculator.hpp  constants.hpp  defines.hpp  interpolator.hpp  k-filter.cpp  k-filter.hpp  meter.hpp  utils.hpp
src/loudness/detail/: meter-impl.cpp  meter-impl.hpp
test/: CMakeLists.txt  test-ebur128.cpp  test-k-filter.cpp  test-meter.cpp  test-utilities.hpp
